--- a/src/components/Slide/Slide.css
+++ b/src/components/Slide/Slide.css
@@ -4,6 +4,7 @@
     margin: 10px;
     gap: 10px;
     margin-bottom: 10px;
+    padding-right: 20px;
 }
 
 .inner-slider {
